# srm_react_fastapi

./: .gitignore
srm_backend/: .gitignore  Makefile  docker-compose.yml  pyproject.toml
srm_backend/src/: create_app.py  main.py
srm_backend/src/alembic/: env.py
srm_backend/src/alembic/versions/: 2025_06_08_1305-bb46aa110880_initial_tables.py  2025_06_08_2303-1380640658cf_create_employees_table.py  2025_06_12_2148-df29181b383d_added_the_column_password_to_employees_.py  2025_06_13_1829-8e713daab2ad_added_the_column_password_to_employees_.py  2025_07_17_1746-cd12271b5f21_create_table_position.py  2025_07_17_1754-adf9f671d6cd_replaced_position_with_position_id.py  2025_08_11_1900-ab96bdd8904c_create_table_category.py  2025_08_12_1748-eb2c42a23a58_create_service_table.py  (+2 more)
srm_backend/src/api/: __init__.py
srm_backend/src/api/auth/: view.py  (+1 more)
srm_backend/src/core/: __init__.py  authentication.py  config.py  error_handlers.py  exceptions.py  middlewares.py  security.py
srm_backend/src/infrastructure/: __init__.py  query_filters.py
srm_backend/src/schemas/: booking_schema.py  category_schema.py  employee_shemas.py  enums.py  position_shemas.py  service_shemas.py  user_schema.py
srm_backend/src/services/: auth_service.py  base_service.py  booking_service.py  category_service.py  employee_service.py  positiion_service.py  service_service.py  user_service.py
srm_bot/: pyproject.toml
srm_bot/src/: create_bot.py  main.py
srm_bot/src/core/: __init__.py  base_client.py  config.py  service_api.py  states.py
srm_bot/src/handlers/: __init__.py  booking.py  start.py
(+101 files in other folders)
